fixed header alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,18 +13,24 @@ body{
     margin: 0;
 }
 
-main{
-    background-color: rgba(246, 248, 249, 0.5);
-}
-
 header{
+    height: 5rem;
     padding-top: 1rem;
-    padding-bottom: 1rem;
-    padding-left: 1rem;
+    margin-bottom: 3rem;
 }
 
 #title{
     font-family: sans-serif;
     font-weight:bold;
-    font-size: 3rem;
+    font-size: 2.5rem;
+    vertical-align: middle;
+}
+
+#logo{
+    vertical-align: middle;
+    padding-left: 1.5rem;
+}
+
+main{
+    background-color: rgba(246, 248, 249, 0.5);
 }
